force-app/main/default/objects/Policy__c/fields/Dividend_Expiration_Year_Earned__c.field-meta.xml
<CustomField>
    <fullName>Dividend_Expiration_Year_Earned__c</fullName>
    <description>Dividend_Net_Written__c *  Expiration_Year_Percentage__c * 0.1</description>
    <formula>if (Expiration_Year_Percentage__c &gt; 1,
  1,
  Dividend_Net_Written__c *  Expiration_Year_Percentage__c * 0.1
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expiration Year Dividend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>