force-app/main/default/objects/Policy__c/fields/Dividend_Net_Written__c.field-meta.xml
<CustomField>
    <fullName>Dividend_Net_Written__c</fullName>
    <description>Dividend Net Written</description>
    <formula>Original_First_5M_Premium__c -  Original_Ceded_Primary__c -  Original_Ceded_Excess__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dividend Net Written</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>