force-app/main/default/objects/Policy__c/fields/Dividend_Pro_Rata__c.field-meta.xml
<CustomField>
    <fullName>Dividend_Pro_Rata__c</fullName>
    <formula>365/ ((Expiration_Date__c - 1 ) - Effective_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>xxxDividend Pro Rata</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>