force-app/main/default/objects/Policy__c/fields/Docket_Conflict_Coordination_Comment__c.field-meta.xml
<CustomField>
    <fullName>Docket_Conflict_Coordination_Comment__c</fullName>
    <label>Docket/Conflict Coordination Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>