force-app/main/default/objects/Policy__c/fields/Docket_Conflict_Coordination_with_Main__c.field-meta.xml
<CustomField>
    <fullName>Docket_Conflict_Coordination_with_Main__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Docket/Conflict Coordination with Main</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>