force-app/main/default/objects/Policy__c/fields/Docket_Systems__c.field-meta.xml
<CustomField>
    <fullName>Docket_Systems__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Docket Systems</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>