force-app/main/default/objects/Policy__c/fields/Docket_Systems_Comment__c.field-meta.xml
<CustomField>
    <fullName>Docket_Systems_Comment__c</fullName>
    <label>Docket Systems Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>