force-app/main/default/objects/Policy__c/fields/DocumentType__c.field-meta.xml
<CustomField>
    <fullName>DocumentType__c</fullName>
    <inlineHelpText>Select which type of document you would like to generate.</inlineHelpText>
    <label>Document Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Declaration Page</fullName>
            </value>
            <value>
                <fullName>Certification of Insurance</fullName>
            </value>
            <value>
                <fullName>Policy Letter</fullName>
            </value>
            <value>
                <fullName>Merge All</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>