force-app/main/default/objects/Policy__c/fields/Effective_Date_History__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date_History__c</fullName>
    <label>Effective Date History</label>
    <type>Date</type>
</CustomField>