force-app/main/default/objects/Policy__c/fields/Effective_Month__c.field-meta.xml
<CustomField>
    <fullName>Effective_Month__c</fullName>
    <formula>MONTH(Effective_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Effective Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>