force-app/main/default/objects/Policy__c/fields/Effective_Year_Dividend__c.field-meta.xml
<CustomField>
    <fullName>Effective_Year_Dividend__c</fullName>
    <description>Dividend_Net_Written__c *  Effective_Year_Percentage__c * .1</description>
    <formula>Dividend_Net_Written__c *  Effective_Year_Percentage__c * 0.1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Effective Year Dividend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>