force-app/main/default/objects/Policy__c/fields/Effective_Year_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Effective_Year_Percentage__c</fullName>
    <description>Prorated portion of effective year</description>
    <formula>IF( 
	OR(ISBLANK( Policy_Cancel_Year__c), Policy_Cancel_Year__c !=  Policy_Effective_Year__c),
  		(DATE(YEAR(Effective_Date__c)+1, 1, 1) - Effective_Date__c)/365
  		, (Cancel_Date__c - Effective_Date__c)/365)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Effective Year Percentage</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>