force-app/main/default/objects/Policy__c/fields/ERE_Date__c.field-meta.xml
<CustomField>
    <fullName>ERE_Date__c</fullName>
    <label>ERE Date</label>
    <type>Date</type>
</CustomField>