force-app/main/default/objects/Policy__c/fields/ERP_Endorsement__c.field-meta.xml
<CustomField>
    <fullName>ERP_Endorsement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ERP Endorsement</label>
    <referenceTo>Policy_Endorsement__c</referenceTo>
    <relationshipLabel>ERP Policy</relationshipLabel>
    <relationshipName>Application_Policy</relationshipName>
    <type>Lookup</type>
</CustomField>