force-app/main/default/objects/Policy__c/fields/Establish_Date__c.field-meta.xml
<CustomField>
    <fullName>Establish_Date__c</fullName>
    <label>xxx-Establish Date</label>
    <type>Date</type>
</CustomField>