force-app/main/default/objects/Policy__c/fields/Expiration_Date_Group__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date_Group__c</fullName>
    <formula>Expiration_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expiration Date (Group)</label>
    <type>Date</type>
</CustomField>