force-app/main/default/objects/Policy__c/fields/Expiration_Date_History__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date_History__c</fullName>
    <label>Expiration Date History</label>
    <type>Date</type>
</CustomField>