force-app/main/default/objects/Policy__c/fields/Expiration_Year_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Year_Percentage__c</fullName>
    <description>Prorated portion of expiration year</description>
    <formula>IF( ISBLANK( Policy_Cancel_Year__c), 
  (Expiration_Date__c - DATE(YEAR(Expiration_Date__c), 1, 1))/365
  , IF (Policy_Cancel_Year__c == Policy_Effective_Year__c
    , 0
    , (Cancel_Date__c - DATE(YEAR(Expiration_Date__c), 1, 1))/365
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expiration Year Percentage</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>