force-app/main/default/objects/Policy__c/fields/EZQ_Online_Additional_Info__c.field-meta.xml
<CustomField>
    <fullName>EZQ_Online_Additional_Info__c</fullName>
    <label>EZQ Online Additional Info</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>