force-app/main/default/objects/Policy__c/fields/Factor_Step_1__c.field-meta.xml
<CustomField>
    <fullName>Factor_Step_1__c</fullName>
    <label>Factor Step 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>