force-app/main/default/objects/Policy__c/fields/Factor_Step_Rate_ID__c.field-meta.xml
<CustomField>
    <fullName>Factor_Step_Rate_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Factor Step Rate ID</label>
    <referenceTo>Step_Rate_Factor__c</referenceTo>
    <relationshipLabel>Application/Policy</relationshipLabel>
    <relationshipName>Application_Policy</relationshipName>
    <type>Lookup</type>
</CustomField>