force-app/main/default/objects/Policy__c/fields/Fee_Suits__c.field-meta.xml
<CustomField>
    <fullName>Fee_Suits__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Fee Suits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>