force-app/main/default/objects/Policy__c/fields/Fee_Suits_Comment__c.field-meta.xml
<CustomField>
    <fullName>Fee_Suits_Comment__c</fullName>
    <label>Fee Suits Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>