force-app/main/default/objects/Policy__c/fields/Final_Quote_10x10_Value__c.field-meta.xml
<CustomField>
    <fullName>Final_Quote_10x10_Value__c</fullName>
    <label>Final Quote 10x10 Value</label>
    <summarizedField>Policy_Quote__c.X10X10__c</summarizedField>
    <summaryFilterItems>
        <field>Policy_Quote__c.Final_Quote__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Policy_Quote__c.Policy__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>