force-app/main/default/objects/Policy__c/fields/Firm_Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Firm_Billing_Address__c</fullName>
    <formula>Account__r.BillingStreet + BR() +
Account__r.BillingCity + &apos;, &apos; +  Account__r.BillingState + &apos;  &apos; + Account__r.BillingPostalCode</formula>
    <label>Firm Billing Address</label>
    <type>Text</type>
</CustomField>