force-app/main/default/objects/Policy__c/fields/Firm_Billing_Address_History__c.field-meta.xml
<CustomField>
    <fullName>Firm_Billing_Address_History__c</fullName>
    <formula>SUBSTITUTE(Firm_Billing_Address_History_Intermedia__c, &apos;_BR_ENCODED_&apos;, &apos;&lt;br&gt;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Firm Billing Address History</label>
    <type>Text</type>
</CustomField>