force-app/main/default/objects/Policy__c/fields/Firm_Billing_Address_History_Intermedia__c.field-meta.xml
<CustomField>
    <fullName>Firm_Billing_Address_History_Intermedia__c</fullName>
    <label>Firm Billing Address History Intermedia</label>
    <type>TextArea</type>
</CustomField>