force-app/main/default/objects/Policy__c/fields/Firm_Contact__c.field-meta.xml
<CustomField>
    <fullName>Firm_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Firm Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Application/Policy</relationshipLabel>
    <relationshipName>Application_Policy</relationshipName>
    <type>Lookup</type>
</CustomField>