force-app/main/default/objects/Policy__c/fields/Firm_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Firm_Contact_Email__c</fullName>
    <description>Related Firm Contact Email</description>
    <formula>Firm_Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Firm Contact Email</label>
    <type>Text</type>
</CustomField>