force-app/main/default/objects/Policy__c/fields/Firm_Contact_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Firm_Contact_First_Name__c</fullName>
    <formula>Firm_Contact__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Firm Contact First Name</label>
    <type>Text</type>
</CustomField>