force-app/main/default/objects/Policy__c/fields/Firm_Contact_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Firm_Contact_Last_Name__c</fullName>
    <formula>Firm_Contact__r.LastName</formula>
    <label>Firm Contact Last Name</label>
    <type>Text</type>
</CustomField>