force-app/main/default/objects/Policy__c/fields/Firm_Mod__c.field-meta.xml
<CustomField>
    <fullName>Firm_Mod__c</fullName>
    <label>Firm Mod</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>