force-app/main/default/objects/Policy__c/fields/Firm_Name__c.field-meta.xml
<CustomField>
    <fullName>Firm_Name__c</fullName>
    <formula>Account__r.Name</formula>
    <label>Firm Name</label>
    <type>Text</type>
</CustomField>