force-app/main/default/objects/Policy__c/fields/Firm_Name_History__c.field-meta.xml
<CustomField>
    <fullName>Firm_Name_History__c</fullName>
    <label>Firm Name History</label>
    <length>255</length>
    <type>Text</type>
</CustomField>