force-app/main/default/objects/Policy__c/fields/First_Claim_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Claim_Date__c</fullName>
    <label>First Claim Date</label>
    <summarizedField>Policy_Claim__c.Claim_Made_Date__c</summarizedField>
    <summaryForeignKey>Policy_Claim__c.Policy__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>