force-app/main/default/objects/Policy__c/fields/Follow_Up_Task_Date__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Task_Date__c</fullName>
    <label>Follow Up Task Date</label>
    <type>Date</type>
</CustomField>