force-app/main/default/objects/Policy__c/fields/Follow_Up_Task_Owner__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Task_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Follow Up Task Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Application_Policy1</relationshipName>
    <type>Lookup</type>
</CustomField>