force-app/main/default/objects/Policy__c/fields/Full_Prior_Acts__c.field-meta.xml
<CustomField>
    <fullName>Full_Prior_Acts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Full Prior Acts</label>
    <type>Checkbox</type>
</CustomField>