force-app/main/default/objects/Policy__c/fields/General_Override_GM__c.field-meta.xml
<CustomField>
    <fullName>General_Override_GM__c</fullName>
    <defaultValue>0</defaultValue>
    <label>General Override</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>