force-app/main/default/objects/Policy__c/fields/General_Override_Internal_Procedures__c.field-meta.xml
<CustomField>
    <fullName>General_Override_Internal_Procedures__c</fullName>
    <label>General Override Internal Procedures</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>