force-app/main/default/objects/Policy__c/fields/General_Override_IP_Comment__c.field-meta.xml
<CustomField>
    <fullName>General_Override_IP_Comment__c</fullName>
    <label>General Override IP Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>