force-app/main/default/objects/Policy__c/fields/GEO_Mod__c.field-meta.xml
<CustomField>
    <fullName>GEO_Mod__c</fullName>
    <defaultValue>1</defaultValue>
    <label>GEO Mod</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>