force-app/main/default/objects/Policy__c/fields/GL_Processing_Date__c.field-meta.xml
<CustomField>
    <fullName>GL_Processing_Date__c</fullName>
    <label>GL Processing Date</label>
    <type>Date</type>
</CustomField>