force-app/main/default/objects/Policy__c/fields/Grouping_Fiscal_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Grouping_Fiscal_Quarter__c</fullName>
    <description>Fiscal Quarter Grouping with Year</description>
    <formula>TEXT(YEAR(Effective_Date__c))+&quot;-Q&quot;+TEXT(Fiscal_Quarter__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grouping - Fiscal Quarter</label>
    <type>Text</type>
</CustomField>