force-app/main/default/objects/Policy__c/fields/Grouping_Practive_Setting__c.field-meta.xml
<CustomField>
    <fullName>Grouping_Practive_Setting__c</fullName>
    <formula>IF ((Active_Laywers__c == 1), &apos;A: Solo Firm&apos;,
IF ((Active_Laywers__c &gt;= 2 &amp;&amp; Active_Laywers__c &lt;= 5), &apos;B: Firm of 2-5 Attys&apos;,
IF ((Active_Laywers__c &gt;= 6 &amp;&amp; Active_Laywers__c &lt;= 10), &apos;C: Firm of 6-10 Attys&apos;,
IF ((Active_Laywers__c &gt;= 11 &amp;&amp; Active_Laywers__c &lt;= 25), &apos;D: Firm of 11-25 Attys&apos;,
IF ((Active_Laywers__c &gt; 25), &apos;E: Firm of 26+ Attys&apos;,
&apos;Unknown&apos;
)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grouping - Practice Setting</label>
    <type>Text</type>
</CustomField>