force-app/main/default/objects/Policy__c/fields/Grouping_Size_of_Firm__c.field-meta.xml
<CustomField>
    <fullName>Grouping_Size_of_Firm__c</fullName>
    <formula>IF ((Active_Laywers__c == 1), &apos;A: 1&apos;,
IF ((Active_Laywers__c &gt;= 2 &amp;&amp; Active_Laywers__c &lt;= 5), &apos;B: 2-5&apos;,
IF ((Active_Laywers__c &gt;= 6 &amp;&amp; Active_Laywers__c &lt;= 10), &apos;C: 6-10&apos;,
IF ((Active_Laywers__c &gt;= 11 &amp;&amp; Active_Laywers__c &lt;= 25), &apos;D: 11-25&apos;,
IF ((Active_Laywers__c &gt;= 26), &apos;E: 26+&apos;,
&apos;Unknown&apos;
)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grouping - Size of Firm</label>
    <type>Text</type>
</CustomField>