force-app/main/default/objects/Policy__c/fields/Grouping_YOY_Quarter_BR__c.field-meta.xml
<CustomField>
    <fullName>Grouping_YOY_Quarter_BR__c</fullName>
    <description>Grouping for Board Report YOY Quarter based on Board_Report_YOY_Quarter__c value)</description>
    <formula>IF(Effective_Date__c &gt;= DATE(YEAR(Board_Report_YOY_Quarter__c)-1, MONTH(Board_Report_YOY_Quarter__c), DAY(Board_Report_YOY_Quarter__c)), TEXT(YEAR(Board_Report_YOY_Quarter__c))+&quot;-&quot;+TEXT(MONTH(Board_Report_YOY_Quarter__c)),
IF(Effective_Date__c &gt;= DATE(YEAR(Board_Report_YOY_Quarter__c)-2, MONTH(Board_Report_YOY_Quarter__c), DAY(Board_Report_YOY_Quarter__c)), TEXT(YEAR(Board_Report_YOY_Quarter__c)-1)+&quot;-&quot;+TEXT(MONTH(Board_Report_YOY_Quarter__c)),
IF(Effective_Date__c &gt;= DATE(YEAR(Board_Report_YOY_Quarter__c)-3, MONTH(Board_Report_YOY_Quarter__c), DAY(Board_Report_YOY_Quarter__c)), TEXT(YEAR(Board_Report_YOY_Quarter__c)-2)+&quot;-&quot;+TEXT(MONTH(Board_Report_YOY_Quarter__c)),
IF(Effective_Date__c &gt;= DATE(YEAR(Board_Report_YOY_Quarter__c)-4, MONTH(Board_Report_YOY_Quarter__c), DAY(Board_Report_YOY_Quarter__c)), TEXT(YEAR(Board_Report_YOY_Quarter__c)-3)+&quot;-&quot;+TEXT(MONTH(Board_Report_YOY_Quarter__c)),
TEXT(YEAR(Board_Report_YOY_Quarter__c-4))+&quot;-&quot;+TEXT(MONTH(Board_Report_YOY_Quarter__c))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grouping - YOY Quarter (BR)</label>
    <type>Text</type>
</CustomField>