force-app/main/default/objects/Policy__c/fields/IBF_Appellate_District__c.field-meta.xml
<CustomField>
    <fullName>IBF_Appellate_District__c</fullName>
    <label>IBF Appellate District</label>
    <length>255</length>
    <type>Text</type>
</CustomField>