force-app/main/default/objects/Policy__c/fields/IBF_Contribtuion__c.field-meta.xml
<CustomField>
    <fullName>IBF_Contribtuion__c</fullName>
    <label>IBF Contribtuion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No IBF Contribution</fullName>
            </value>
            <value>
                <fullName>Yes - IBF Contribution Requested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>