force-app/main/default/objects/Policy__c/fields/IBF_Contribution_Amount__c.field-meta.xml
<CustomField>
    <fullName>IBF_Contribution_Amount__c</fullName>
    <formula>IF ( ISPICKVAL(IBF_Contribtuion__c,&quot;Yes - IBF Contribution Requested&quot;), 
    IF (IBF_Custom_Amount__c &gt; 0,
        IBF_Custom_Amount__c,
        ISBAM_policy_dividend__c
    ),
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IBF Contribution Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>