force-app/main/default/objects/Policy__c/fields/IBF_Custom_Amount__c.field-meta.xml
<CustomField>
    <fullName>IBF_Custom_Amount__c</fullName>
    <label>IBF Custom Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>