force-app/main/default/objects/Policy__c/fields/IBF_Dividend_Remianing__c.field-meta.xml
<CustomField>
    <fullName>IBF_Dividend_Remianing__c</fullName>
    <formula>if (IBF_Custom_Amount__c &gt; 0,
    ISBAM_policy_dividend__c - IBF_Custom_Amount__c,
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IBF Dividend Remianing</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>