force-app/main/default/objects/Policy__c/fields/IBF_Target__c.field-meta.xml
<CustomField>
    <fullName>IBF_Target__c</fullName>
    <label>IBF Target</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Appellate District</fullName>
            </value>
            <value>
                <fullName>Statewide</fullName>
            </value>
            <value>
                <fullName>RPI</fullName>
                <label>Rural Practice Initiative</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>