force-app/main/default/objects/Policy__c/fields/Incurred__c.field-meta.xml
<CustomField>
    <fullName>Incurred__c</fullName>
    <label>Incurred</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>