force-app/main/default/objects/Policy__c/fields/Incurred_Direct_LAE__c.field-meta.xml
<CustomField>
    <fullName>Incurred_Direct_LAE__c</fullName>
    <label>Expense</label>
    <summarizedField>Policy_Claim__c.Incurred_Direct_LAE__c</summarizedField>
    <summaryForeignKey>Policy_Claim__c.Policy__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>