force-app/main/default/objects/Policy__c/fields/Incurred_Retained_Loss__c.field-meta.xml
<CustomField>
    <fullName>Incurred_Retained_Loss__c</fullName>
    <label>Indemnity</label>
    <summarizedField>Policy_Claim__c.Incurred_Retained_Loss__c</summarizedField>
    <summaryForeignKey>Policy_Claim__c.Policy__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>