force-app/main/default/objects/Policy__c/fields/InternalApplication_Form_Link_Internal__c.field-meta.xml
<CustomField>
    <fullName>InternalApplication_Form_Link_Internal__c</fullName>
    <formula>HYPERLINK(&quot;/apex/PaymentGatewaySitePage?sfInternalId=&quot;+ Id , &quot;Internal Application Form Link&quot;,&quot;_Blank&quot;)</formula>
    <label>Application Form Link Internal</label>
    <type>Text</type>
</CustomField>