force-app/main/default/objects/Policy__c/fields/Is_Accepted_Confirm__c.field-meta.xml
<CustomField>
    <fullName>Is_Accepted_Confirm__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If Application status = Accepted and Is_Accepted_Confirm=Yes then Opportunity stages would be Accepted.</description>
    <label>Is Accepted Confirm</label>
    <type>Checkbox</type>
</CustomField>