force-app/main/default/objects/Policy__c/fields/IS_Active_or_Future__c.field-meta.xml
<CustomField>
    <fullName>IS_Active_or_Future__c</fullName>
    <formula>if(AND(RecordType.DeveloperName = &apos;Policy&apos; ,Expiration_Date__c &gt; TODAY(),OR(ISNULL(Cancel_Date__c),Cancel_Date__c&gt; TODAY())),true,false )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Active or Future</label>
    <type>Checkbox</type>
</CustomField>