force-app/main/default/objects/Policy__c/fields/Is_Allow_Calculate_Premium__c.field-meta.xml
<CustomField>
    <fullName>Is_Allow_Calculate_Premium__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is control field- when &quot;Calculate Premium&quot; button pressed then &quot;Is Allow Calculate Premium&quot; will be checked and calculate premium with apex, at last &quot;Is Allow Calculate Premium&quot; will be unchecked.</description>
    <label>Is Allow Calculate Premium</label>
    <type>Checkbox</type>
</CustomField>