force-app/main/default/objects/Policy__c/fields/Is_Allow_to_Generate_AS__c.field-meta.xml
<CustomField>
    <fullName>Is_Allow_to_Generate_AS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field use for AS (Accounting Seeds)
If yes then AS transaction will be create.</description>
    <label>Is_Allow_to_Generate_AS</label>
    <type>Checkbox</type>
</CustomField>