force-app/main/default/objects/Policy__c/fields/Is_AOP_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Is_AOP_Adjustment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is AOP Adjustment</label>
    <type>Checkbox</type>
</CustomField>