force-app/main/default/objects/Policy__c/fields/Is_AOP_Adjustment_Debit_only_allowed__c.field-meta.xml
<CustomField>
    <fullName>Is_AOP_Adjustment_Debit_only_allowed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is AOP Adjustment (Debit only allowed)</label>
    <type>Checkbox</type>
</CustomField>