force-app/main/default/objects/Policy__c/fields/Is_Application__c.field-meta.xml
<CustomField>
    <fullName>Is_Application__c</fullName>
    <formula>IF(RecordType.Name = &quot;Application&quot; &amp;&amp;  NOT(ISPICKVAL(Status__c, &apos;Inquiry&apos;)), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Application</label>
    <type>Checkbox</type>
</CustomField>