force-app/main/default/objects/Policy__c/fields/Is_Associate_Review_Procedures__c.field-meta.xml
<CustomField>
    <fullName>Is_Associate_Review_Procedures__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Associate Review Procedures</label>
    <type>Checkbox</type>
</CustomField>