force-app/main/default/objects/Policy__c/fields/Is_Attorney_Training__c.field-meta.xml
<CustomField>
    <fullName>Is_Attorney_Training__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Attorney Training</label>
    <type>Checkbox</type>
</CustomField>