force-app/main/default/objects/Policy__c/fields/Is_Billing_Procedures__c.field-meta.xml
<CustomField>
    <fullName>Is_Billing_Procedures__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Billing Procedures</label>
    <type>Checkbox</type>
</CustomField>