force-app/main/default/objects/Policy__c/fields/Is_Billings_per_Attorney__c.field-meta.xml
<CustomField>
    <fullName>Is_Billings_per_Attorney__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Billings per Attorney</label>
    <type>Checkbox</type>
</CustomField>