force-app/main/default/objects/Policy__c/fields/Is_Cancel_Flat__c.field-meta.xml
<CustomField>
    <fullName>Is_Cancel_Flat__c</fullName>
    <description>Effective == Cancel Date</description>
    <formula>Effective_Date__c ==  Cancel_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Cancel Flat</label>
    <type>Checkbox</type>
</CustomField>