force-app/main/default/objects/Policy__c/fields/Is_Canceled__c.field-meta.xml
<CustomField>
    <fullName>Is_Canceled__c</fullName>
    <formula>IF (ISNULL(Cancel_Date__c), false, true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Canceled</label>
    <type>Checkbox</type>
</CustomField>