force-app/main/default/objects/Policy__c/fields/Is_Claim_credit_or_debit__c.field-meta.xml
<CustomField>
    <fullName>Is_Claim_credit_or_debit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Claim credit or debit</label>
    <type>Checkbox</type>
</CustomField>