force-app/main/default/objects/Policy__c/fields/Is_Client_Intake_New_Matter_Acceptance__c.field-meta.xml
<CustomField>
    <fullName>Is_Client_Intake_New_Matter_Acceptance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Client Intake/New Matter Acceptance</label>
    <type>Checkbox</type>
</CustomField>